--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -23,4 +23,5 @@
 .home-img {
     min-width: 100vw;
     height: 100vh;
+    object-fit: cover;
 }
